--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,64 @@
-# Core ML/AI Framework
-torch>=2.1.0
-torchvision>=0.16.0
-torchaudio>=2.1.0
-transformers>=4.35.0
-accelerate>=0.24.0
-datasets>=2.14.0
+# Core ML and AI libraries
+torch>=2.0.0
+torchvision>=0.15.0
+torchaudio>=2.0.0
+transformers>=4.30.0
+accelerate>=0.20.0
+datasets>=2.12.0
 
-# Distributed Training
-deepspeed>=0.12.0
+# Computer vision and video processing
+opencv-python>=4.8.0
+opencv-contrib-python>=4.8.0
+pillow>=10.0.0
+imageio>=2.31.0
+imageio-ffmpeg>=0.4.8
+
+# Audio processing
+librosa>=0.10.0
+soundfile>=0.12.1
+
+# Scientific computing
+numpy>=1.24.0
+scipy>=1.11.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
+
+# Video editing and multimedia
+moviepy>=1.0.3
+ffmpeg-python>=0.2.0
+
+# Training and optimization
+deepspeed>=0.9.0
+wandb>=0.15.0
+tensorboard>=2.13.0
+omegaconf>=2.3.0
+
+# HTTP and data downloading
+requests>=2.31.0
+tqdm>=4.65.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+
+# Optional advanced features
+peft>=0.4.0  # Parameter-efficient fine-tuning
+bitsandbytes>=0.39.0  # Quantization support
+flash-attn>=2.0.0  # Flash attention (if supported)
+
+# Development and testing
+pytest>=7.4.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.5.0
+
+# Utilities
+pyyaml>=6.0.1
+python-dotenv>=1.0.0
+colorama>=0.4.6
+rich>=13.4.0
+
+# Optional dependencies for specific datasets
+youtube-dl>=2021.12.17  # For YouTube dataset downloading
+pytube>=15.0.0  # Alternative YouTube downloader
 peft>=0.7.0  # LoRA/QLoRA
 bitsandbytes>=0.41.0
 
