--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,10 @@ pandas>=2.0.0
 # Video editing and multimedia
 moviepy>=1.0.3
 ffmpeg-python>=0.2.0
+pydub>=0.25.1
 
 # Training and optimization
-deepspeed>=0.9.0
+deepspeed>=0.9.0  
 wandb>=0.15.0
 tensorboard>=2.13.0
 omegaconf>=2.3.0
@@ -112,6 +113,7 @@ omegaconf>=2.3.0
 hydra-core>=1.3.0
 rich>=13.6.0
 typer>=0.9.0
+click>=8.0.0
 
 # Development
 pytest>=7.4.0
